# 05_CHAOS_Coding_Language

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  Dockerfile  EdenCore.py  FUTURE_WORK.md  GLOSSARY.md  GLOSSARY_PROMPT.md  GOVERNANCE.md  LEARNING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  chaos_agent.py  chaos_agent_cli.py  chaos_cli.py  chaos_context.py  chaos_continued.complete_build.py  chaos_dreams.py  chaos_emotion.py  chaos_error.py  chaos_errors.py  chaos_exec.py  chaos_fuzz.py  chaos_graph.py  chaos_interpreter.py  chaos_language.complete_build.py  chaos_lexer.py  chaos_logger.py  chaos_monorepo.py  chaos_parser.py  chaos_protocols.py  chaos_reports.py  (+7 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  pylint.yml  tests.yml  ultimate.yml
OKComputer_CHAOS Repo Overhaul/: pyproject.toml  setup.cfg
OKComputer_CHAOS Repo Overhaul/examples/: hello_chaos.sn  memory_garden.sn  relation_box.sn
OKComputer_CHAOS Repo Overhaul/src/chaos/: __init__.py  chaos_agent.py  chaos_cli.py  chaos_context.py  chaos_dreams.py  chaos_emotion.py  chaos_errors.py  chaos_exec.py  chaos_lexer.py  chaos_protocols.py  chaos_validator.py  eden_core.py
OKComputer_CHAOS Repo Overhaul/tests/: test_parser.py  test_runtime.py
artifacts/: __init__.py
artifacts/corpus_sn/: __init__.py  bible_silence_bridge.sn  emotional_weather.sn  relation_box.sn
artifacts/corpus_sn/demo_suite/: 02_memory_garden_anchor.sn  03_consent_gate.sn  05_incident_report.sn  09_data_request.sn  10_ai_handoff.sn  12_retrospective.sn  README.md
artifacts/examples/: README.md  memory_garden.chaos  persona_language_flowers.chaos
artifacts/templates/: README.md  standard.chaos
chaos_corpus/: __init__.py  memory_garden.sn  relation_box.sn  ritual_transformation.sn  stability_call.sn
chaos_corpus/demo_suite/: 01_hello_welcome.sn  04_check_in_protocol.sn  06_research_brief.sn  08_meeting_agenda.sn  11_transition_ritual.sn
chaos_language/: __init__.py  complete_build.py
docs/: API_REFERENCE.md  DEBUGGING.md  PR_TEMPLATE.md  chaos_bug_tasks.md  chaos_monorepo.md
docs/guides/: DEV.md  LEARNING.md
docs/modernization/: IMPROVEMENTS_SUMMARY.md  README.md  internal_architecture.md
docs/reference/: GLOSSARY.md  GLOSSARY_PROMPT.md  SPEC.md
docs/roadmap/: FUTURE_WORK.md
examples/: README.md  config_with_pii.chaos  memory_vow.chaos  protocol_stability_call.chaos
experiments/modernization/: README.md
schema/: chaos.schema.json
scripts/: README.md  chaos_cli.py  chaos_exec.py  chaos_fuzz.py  execute_chaos_canonicalize.sh
scripts/modernization/: pyproject.toml  setup.cfg
src/artifacts/: __init__.py
src/artifacts/corpus_sn/: __init__.py  client_success.sn
src/artifacts/corpus_sn/demo_suite/: 07_wellbeing_check.sn  README.md
src/chaos/: chaos_agent_cli.py  chaos_fuzz.py  chaos_graph.py  chaos_parser.py  chaos_runtime.py  chaos_stdlib.py  chaos_validator.py  eden_core.py
src/chaos_language/: EdenCore.py  README.md  __init__.py  chaos_agent.py  chaos_dreams.py  chaos_emergence.py  chaos_format_validator.py  chaos_graph.py  chaos_interpreter.py  chaos_language.complete_build.py  chaos_lexer.py  chaos_parser.py  chaos_protocols.py  chaos_reports.py  chaos_runtime.py  chaos_stdlib.py  chaos_validator.py  complete_build.py
src/chaos_language/cli/: __init__.py  chaos_agent_cli.py  chaos_cli.py  chaos_exec.py  chaos_validate.py  packaged_scripts.py
src/chaos_legacy/: chaos_fuzz.py  chaos_interpreter.py  chaos_lexer.py  chaos_logger.py  chaos_parser.py
templates/: README.md  ethical.chaos  minimal.chaos  standard.chaos
tests/: README.md  test_agent.py  test_chaos_canonical.py  test_cli_entrypoints.py  test_cli_execution.py  test_emergence.py  test_emotion.py  test_format_validator.py  test_interpreter.py  test_lexer.py  test_parser.py  test_reports.py  test_validator.py
tests/chaos_modern/: __init__.py  test_lexer.py  test_parser.py  test_runtime.py
tools/: __init__.py  generate_chaos_shims.py
tools/cli_shims/: README.md  __init__.py  chaos_agent_cli.py  chaos_cli.py  chaos_exec.py  chaos_fuzz.py
tools/cli_shims/modernization/: pyproject.toml  validate_modernization.py
