[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-language"
version = "0.1.0"
description = "CHAOS scripting language runtime, agent, and business tooling"
readme = "README.md"
authors = [{ name = "Paradigm Eden" }]
license = { text = "Eden Cooperative License" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/eden-chaos"
Source = "https://example.com/eden-chaos/source"

[project.scripts]
chaos-cli = "scripts.chaos_cli:main"
chaos-exec = "scripts.chaos_exec:main"
chaos-agent = "scripts.chaos_agent_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chaos_language = ["*.py"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
