[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-language"
version = "0.1.0"
description = "CHAOS scripting language runtime, agent, and business tooling"
readme = "README.md"
authors = [{ name = "Paradigm Eden" }]
license = { text = "Eden Cooperative License" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-cov>=7.0.0,<8",
    "pylint>=4.0.4,<5",
    "pre-commit>=4.5.0,<5",
    "isort>=7.0.0,<8",
    "build>=1.3.0,<2",
    "wheel>=0.45.1",
]

[project.urls]
Homepage = "https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language"
Source = "https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language"
Documentation = "https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language#readme"
Issues = "https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language/issues"
Changelog = "https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language/blob/main/CHANGELOG.md"

[project.scripts]
chaos-cli = "chaos_language.cli.chaos_cli:main"
chaos-exec = "chaos_language.cli.chaos_exec:main"
chaos-agent = "chaos_language.cli.chaos_agent_cli:main"
chaos-validate = "chaos_language.cli.chaos_validate:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
chaos_language = ["*.py"]
chaos_corpus = ["**/*.sn"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.pylint.main]
ignore-patterns = ["__pycache__", ".*\\.egg-info"]
py-version = "3.9"

[tool.pylint.messages_control]
# Disable checks that conflict with narrative-first coding style
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme (allow TODO comments)
    "C0301",  # line-too-long (handled by max-line-length)
    "R0801",  # duplicate-code (narrative patterns may repeat)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-locals = 20

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "venv", "build", "dist"]
