[metadata]
name = chaos-language
author = CHAOS Community
author_email = chaos@edenos.org
description = CHAOS: A Symbolic-Emotional Programming Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language
project_urls =
    Bug Tracker = https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language/issues
    Documentation = https://github.com/Paradigm-Eden/05_CHAOS_Coding_Language#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Interpreters
    Topic :: Text Processing :: Linguistic
    Topic :: Artistic Software

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chaos-cli = chaos_language.cli.chaos_cli:main
    chaos-agent = chaos_language.cli.chaos_agent_cli:main
    chaos-exec = chaos_language.cli.chaos_exec:main
    chaos-validate = chaos_language.cli.chaos_validate:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
